# QML-RGB-Sorter

./: CMakeLists.txt  README.md  Theme.js  azure-pipelines.yml  main.qml  qml.qrc
FrontEnd/: CMakeLists.txt  CustomRadioButton.qml  ImageProvider.cpp  ImageProvider.h  LiveImage.cpp  LiveImage.h  PopupConfirm.qml  PopupError.qml  Theme.js  frontend.cpp  frontend.h  main.qml  qml.qrc
ImageProcessing/: CMakeLists.txt  imageenums.h  imageprocessing.cpp  imageprocessing.h
